# backend/Api/Dto/RedeemDto.cs
@@ -1,3 +1,3 @@
 ﻿namespace Api.Dto;
 
-public sealed record RedeemDto(string Token);
+public sealed record RedeemDto(string Token, bool AllTables);
