# frontend/openapi.json
@@ -320,6 +320,58 @@
           }
         }
       }
+    },
+    "/api/Image/{id}/original": {
+      "get": {
+        "tags": [
+          "Image"
+        ],
+        "operationId": "Image_GetOriginal",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -359,6 +411,9 @@
         "properties": {
           "token": {
             "type": "string"
+          },
+          "allTables": {
+            "type": "boolean"
           }
         }
       },
